k8s/foo.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: foo
  labels:
    app: foo

spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-upstreams": "postgres-postgresql:5432"
    spec:
      containers:
        - name: foo
          image: joaofnds/foo
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: foo

spec:
  selector:
    app: foo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
