k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: foo-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: foo
                port:
                  number: 80
